--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "loret0g/zeroemission",
   "description": "Proyecto final de DAW",
   "require": {
-    "nikic/fast-route": "^1.3",
-    "vlucas/phpdotenv": "^5.6"
+    "nikic/fast-route": "^1.3"
   },
   "autoload": {
       "psr-4": {
